<resources>
    <string name="app_name">Yip!</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_map">Map</string>
    <string name="search_title">Search for Businesses</string>
    <string name="search_hint">Dominos, Pizza Hut, etc.</string>
    <string name="default_location">San Diego, CA</string>
    <string name="empty_list">Empty List.</string>
    <string name="popup_title">Welcome!</string>
    <string name="popup_text">Welcome to Yip!\n\nStart by pressing the Search button on the top
        right corner.</string>
    <string name="popup_btn_text">Got it!</string>

    <string name="search_bar_hint">Pizza, Sushi, etc&#8230;</string>
    <string name="location_bar_hint">San Diego, CA</string>
    <string name="search_item_review">Reviews</string>

    <string name="fm_search_item_rating_description">Overall Number of Stars</string>
    <string name="fm_search_item_business_image_description">Business Picture</string>

    <string name="request_protocol">https</string>
    <string name="request_header_key">Authorization</string>
    <string name="request_header_value">Bearer</string>
    <string name="loading_request">Getting Request&#8230;</string>

    <string name="business_detail_isclosed">Currently Closed</string>
    <string name="business_detail_isopen">Currently Open</string>
    <string name="business_detail_hours">HOURS:</string>
    <string name="business_detail_hours_monday">Monday:</string>
    <string name="business_detail_hours_tuesday">Tuesday:</string>
    <string name="business_detail_hours_wednesday">Wednesday:</string>
    <string name="business_detail_hours_thursday">Thursday:</string>
    <string name="business_detail_hours_friday">Friday:</string>
    <string name="business_detail_hours_saturday">Saturday:</string>
    <string name="business_detail_hours_sunday">Sunday:</string>
    <string name="business_detail_hours_unknown">Unknown day:</string>
    <string name="business_detail_hours_time_to">&#160;-&#160;</string>
    <string name="business_detail_no_reviews">No Reviews Available.</string>

    <!--Error Messages-->
    <string name="business_detail_open_map_error">Unable to open map.</string>
    <string name="business_detail_open_dialer_error">Unable to open dialer.</string>
    <string name="business_detail_open_browser_error">Unable to open browser.</string>
    <string name="yelp_response_business_search_alias_error">Alias Unavailable</string>
    <string name="yelp_response_business_search_name_error">Name Unavailable</string>
    <string name="yelp_response_business_detail_price_error">Price Unavailable</string>
    <string name="yelp_response_business_search_categories_none">No Categories</string>
    <string name="yelp_response_business_search_categories_error">Categories Unavailable</string>

    <string name="volley_success">DATA RETRIEVAL SUCCESS</string>
    <string name="volley_error">DATA RETRIEVAL ERROR: </string>
    <string name="volley_search_error">Unable to search.
        Please make sure Search term and location is valid.
        Or check your network connection.</string>

</resources>
