<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context=".SearchActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:hint="@string/search_bar_hint"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:hint="@string/location_bar_hint"
            android:inputType="textPostalAddress"
            android:text="@string/default_location"
            app:layout_constraintTop_toBottomOf="@id/search_input" />

        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_box"
            android:src="@drawable/ic_action_search"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_input" />

        <TextView
            android:id="@+id/no_list_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_btn" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>